--- a/app/public/home.html
+++ b/app/public/home.html
@@ -10,9 +10,26 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B" crossorigin="anonymous">
   </head>
   <body>
-    <h1>FriendFinder</h1>
+    <div class="container">
 
-    
+      <div class="jumbotron">
+        <h1 class="text-center">FriendFinder</h1> 
+        <hr>
+        <h2 class="text-center">Answer a few basic quetions.</h2>
+        <h2 class="text-center">Then find the friend with the greatest compatibility!</h2>
+        <div class="text-center">
+          <a href="/survey"><button type="button" class="btn btn-primary">Go to Survey</button></a>
+        </div>
+      </div>
+  
+      <footer class="footer">
+        <div class="container">
+          <p><a href="/api/friends">API Friends List</a> | <a href="https://github.com/bmagers/FriendFinder">GitHub Repo</a>
+        </div>
+      </footer>
+  
+    </div>
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
