create JSON object from survey answers

--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -27,11 +27,11 @@
       <br>
 
       <label for="name"><b>Name</b> (required)</label>
-      <input type="text" class="form-control form-control-lg question" id="name">
+      <input type="text" class="form-control form-control-lg" id="name">
       <br>
 
       <label for="photoUrl"><b>Link to Photo Image</b> (required)</label>
-      <input type="text" class="form-control form-control-lg question" id="photoUrl">
+      <input type="text" class="form-control form-control-lg" id="photoUrl">
       <br>
 
       <h2>The Questions</h2>
@@ -39,111 +39,111 @@
 
       <label for="q1"><b>1. Your mind is always buzzing with unexplored ideas and plans.</b></label>
       <select class="form-control form-control-lg question" id="q1">
-        <option selected disabled>Select an option</option>
-        <option>1 (strongly disagree)</option>
-        <option>2</option>
-        <option>3</option>
-        <option>4</option>
-        <option>5 (strongly agree)</option>
+        <option value="0" selected disabled>Select an option</option>
+        <option value="1">1 (strongly disagree)</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+        <option value="4">4</option>
+        <option value="5">5 (strongly agree)</option>
       </select>
       <br>
 
       <label for="q2"><b>2. Generally speaking, you rely more on your experience than your imagination.</b></label>
       <select class="form-control form-control-lg question" id="q2">
-        <option selected disabled>Select an option</option>
-        <option>1 (strongly disagree)</option>
-        <option>2</option>
-        <option>3</option>
-        <option>4</option>
-        <option>5 (strongly agree)</option>
+        <option value="0" selected disabled>Select an option</option>
+        <option value="1">1 (strongly disagree)</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+        <option value="4">4</option>
+        <option value="5">5 (strongly agree)</option>
       </select>
       <br>
 
       <label for="q3"><b>3. You find it easy to stay relaxed and focused even when there is some pressure.</b></label>
       <select class="form-control form-control-lg question" id="q3">
-        <option selected disabled>Select an option</option>
-        <option>1 (strongly disagree)</option>
-        <option>2</option>
-        <option>3</option>
-        <option>4</option>
-        <option>5 (strongly agree)</option>
+        <option value="0" selected disabled>Select an option</option>
+        <option value="1">1 (strongly disagree)</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+        <option value="4">4</option>
+        <option value="5">5 (strongly agree)</option>
       </select>
       <br>
 
       <label for="q4"><b>4. You rarely do something just out of sheer curiosity.</b></label>
       <select class="form-control form-control-lg question" id="q4">
-        <option selected disabled>Select an option</option>
-        <option>1 (strongly disagree)</option>
-        <option>2</option>
-        <option>3</option>
-        <option>4</option>
-        <option>5 (strongly agree)</option>
+        <option value="0" selected disabled>Select an option</option>
+        <option value="1">1 (strongly disagree)</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+        <option value="4">4</option>
+        <option value="5">5 (strongly agree)</option>
       </select>
       <br>
 
       <label for="q5"><b>5. People can rarely upset you.</b></label>
       <select class="form-control form-control-lg question" id="q5">
-        <option selected disabled>Select an option</option>
-        <option>1 (strongly disagree)</option>
-        <option>2</option>
-        <option>3</option>
-        <option>4</option>
-        <option>5 (strongly agree)</option>
+        <option value="0" selected disabled>Select an option</option>
+        <option value="1">1 (strongly disagree)</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+        <option value="4">4</option>
+        <option value="5">5 (strongly agree)</option>
       </select>
       <br>
 
       <label for="q6"><b>6. It is often difficult for you to relate to other people’s feelings.</b></label>
       <select class="form-control form-control-lg question" id="q6">
-        <option selected disabled>Select an option</option>
-        <option>1 (strongly disagree)</option>
-        <option>2</option>
-        <option>3</option>
-        <option>4</option>
-        <option>5 (strongly agree)</option>
+        <option value="0" selected disabled>Select an option</option>
+        <option value="1">1 (strongly disagree)</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+        <option value="4">4</option>
+        <option value="5">5 (strongly agree)</option>
       </select>
       <br>
 
       <label for="q7"><b>7. In a discussion, truth should be more important than people’s sensitivities.</b></label>
       <select class="form-control form-control-lg question" id="q7">
-        <option selected disabled>Select an option</option>
-        <option>1 (strongly disagree)</option>
-        <option>2</option>
-        <option>3</option>
-        <option>4</option>
-        <option>5 (strongly agree)</option>
+        <option value="0" selected disabled>Select an option</option>
+        <option value="1">1 (strongly disagree)</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+        <option value="4">4</option>
+        <option value="5">5 (strongly agree)</option>
       </select>
       <br>
 
       <label for="q8"><b>8. You rarely get carried away by fantasies and ideas.</b></label>
       <select class="form-control form-control-lg question" id="q8">
-        <option selected disabled>Select an option</option>
-        <option>1 (strongly disagree)</option>
-        <option>2</option>
-        <option>3</option>
-        <option>4</option>
-        <option>5 (strongly agree)</option>
+        <option value="0" selected disabled>Select an option</option>
+        <option value="1">1 (strongly disagree)</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+        <option value="4">4</option>
+        <option value="5">5 (strongly agree)</option>
       </select>
       <br>
 
       <label for="q9"><b>9. You think that everyone’s views should be respected regardless of whether they are supported by facts or not.</b></label>
       <select class="form-control form-control-lg question" id="q9">
-        <option selected disabled>Select an option</option>
-        <option>1 (strongly disagree)</option>
-        <option>2</option>
-        <option>3</option>
-        <option>4</option>
-        <option>5 (strongly agree)</option>
+        <option value="0" selected disabled>Select an option</option>
+        <option value="1">1 (strongly disagree)</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+        <option value="4">4</option>
+        <option value="5">5 (strongly agree)</option>
       </select>
       <br>
 
       <label for="q10"><b>10. You feel more energetic after spending time with a group of people.</b></label>
       <select class="form-control form-control-lg question" id="q10">
-        <option selected disabled>Select an option</option>
-        <option>1 (strongly disagree)</option>
-        <option>2</option>
-        <option>3</option>
-        <option>4</option>
-        <option>5 (strongly agree)</option>
+        <option value="0" selected disabled>Select an option</option>
+        <option value="1">1 (strongly disagree)</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+        <option value="4">4</option>
+        <option value="5">5 (strongly agree)</option>
       </select>
       <br>
 
@@ -165,10 +165,20 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em" crossorigin="anonymous"></script>
     <script type="text/javascript">
       $("#submit").on("click", function(event) {
-        // create json object with results
+        var scores = [];
+        $("select option:selected").each(function(index, elem) {
+          scores.push($(this).val());
+        });
+        var answers = {
+          name: $("#name").val().trim(),
+          photo: $("#photoUrl").val().trim(),
+          scores: scores
+        };
+
         // send api post request
 
-      })
+
+      });
 
     </script>
   </body>
