--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -2,20 +2,27 @@
 <html lang="en">
   <head>
     <title>FriendFinder Survey</title>
+
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B" crossorigin="anonymous">
+
     <style>
-      body {
-        background-color: lightgoldenrodyellow;
-      }
       .container {
         width: 670px;
       }
+      .footer {
+        margin: 25px 0;
+      }
+      #friendPhoto {
+        max-width: 400px;
+        margin: auto;
+      }
     </style>
+
   </head>
   <body>
     <div class="container">
@@ -27,11 +34,11 @@
       <br>
 
       <label for="name"><b>Name</b> (required)</label>
-      <input type="text" class="form-control form-control-lg" id="name">
+      <input type="text" class="form-control form-control-lg" id="name" required="required" data-error="Please enter your name.">
       <br>
 
       <label for="photoUrl"><b>Link to Photo Image</b> (required)</label>
-      <input type="text" class="form-control form-control-lg" id="photoUrl">
+      <input type="text" class="form-control form-control-lg" id="photoUrl" required="required" data-error="Please enter a link to your photo.">
       <br>
 
       <h2>The Questions</h2>
@@ -170,7 +177,7 @@
           </div>
           <div class="modal-body">
             <h1 id="friendName"></h1>
-            <img id="friendPhoto">
+            <img id="friendPhoto" width="90%">
           </div>
           <div class="modal-footer">
             <button id="modalClose" type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -185,25 +192,41 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em" crossorigin="anonymous"></script>
     <script type="text/javascript">
+
       $("#submit").on("click", function(event) {
 
-        var scores = [];
-        $("select option:selected").each(function(index, elem) {
-          scores.push($(this).val());
-        });
+        function validateForm() {
+          var isValid = true;
+          $(".form-control").each(function() {
+            if ($(this).val() === "") {
+              isValid = false;
+            }
+          });
+          return isValid;
+        }
 
-        var answers = {
-          "name": $("#name").val().trim(),
-          "photo": $("#photoUrl").val().trim(),
-          "scores": scores
-        };
+        if (validateForm()) {
 
-        $.post("/api/friends", answers, function(friend) {
-          // console.log(answers);
-          $("#friendName").text(friend.name);
-          $("#friendPhoto").attr("src", friend.photo);
-          $("#friendResult").modal("toggle");
-        });
+          var scores = [];
+          $("select option:selected").each(function(index, elem) {
+            scores.push($(this).val());
+          });
+
+          var answers = {
+            "name": $("#name").val().trim(),
+            "photo": $("#photoUrl").val().trim(),
+            "scores": scores
+          };
+
+          $.post("/api/friends", answers, function(friend) {
+            $("#friendName").text(friend.name);
+            $("#friendPhoto").attr("src", friend.photo);
+            $("#friendResult").modal("toggle");
+          });
+
+        } else {
+          alert("Please enter your name and a link to your photo!");
+        }
 
       });
 
