--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -34,11 +34,11 @@
       <br>
 
       <label for="name"><b>Name</b> (required)</label>
-      <input type="text" class="form-control form-control-lg" id="name" required="required" data-error="Please enter your name.">
+      <input type="text" class="form-control form-control-lg" id="name" required>
       <br>
 
       <label for="photoUrl"><b>Link to Photo Image</b> (required)</label>
-      <input type="text" class="form-control form-control-lg" id="photoUrl" required="required" data-error="Please enter a link to your photo.">
+      <input type="text" class="form-control form-control-lg" id="photoUrl" required>
       <br>
 
       <h2>The Questions</h2>
